changing index.html for testing

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
         <img class = "newappIcon" src="static/images/newapp-icon.png">
       </td>
       <td>
-          <h1 id = "message">Hello Stanley from Docker</h1>
+          <h1 id = "message">Hello World</h1>
       </td>
   </table>
 </body>
