--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
   <table>
     <tr>
       <td style= "width:30%;">
-        <img class = "newappIcon" src="static/images/newapp-icon.png">
+        <img class = "newappIcon" src="static/images/NYU-classes.jpg">
       </td>
       <td>
           <h1 id = "message">Hello World</h1>
