--- a/static/index.html
+++ b/static/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Hello World Docker Application</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="static/stylesheets/style.css">
-</head>
-<body>
-  <table>
-    <tr>
-      <td style= "width:30%;">
-        <img class = "newappIcon" src="static/images/NYU-classes.jpg">
-      </td>
-      <td>
-          <h1 id = "message">Hello World</h1>
-      </td>
-  </table>
-</body>
-</html>
+	<head>
+	  <meta charset="utf-8"/>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	  <title>DEVOPS GHOSTINSPECTOR DEMO</title>
+	  <link rel="stylesheet" type="text/css" href="https://s3.amazonaws.com/unfilteredproject.org/CSS/devopsdemo.css">
+	</head>
+	<body>
+	  <nav>
+	  	<a id="logo" href="#Home">Devops Demo</a>
+	  </nav>
+	  <div class="headline header">
+	  	<h1>Hello from our local web app</h1>
+	  </div>
+	</body>
+	</html>
