Intentionally Breaking index.html

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 	  	<a id="logo" href="#Home">Devops Demo</a>
 	  </nav>
 	  <div class="headline header">
-	  	<h1>Hello from our local web app</h1>
+	  	<h1>Hello Mistake from our local web app</h1>
 	  </div>
 	</body>
 	</html>
